# AoC20

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: badges.yml
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  cli.cpp  cli.h  common.cpp  common.h  day.h
src/day01/: CMakeLists.txt  day01.cpp  day01.h
src/day02/: CMakeLists.txt  day02.cpp  day02.h
src/day03/: CMakeLists.txt  day03.cpp  day03.h
src/day04/: CMakeLists.txt  day04.cpp  day04.h
src/day05/: CMakeLists.txt  day05.cpp  day05.h
src/day06/: CMakeLists.txt  day06.cpp  day06.h
src/day07/: CMakeLists.txt  day07.cpp  day07.h
src/day08/: CMakeLists.txt  day08.cpp  day08.h
src/day09/: CMakeLists.txt  day09.cpp  day09.h
src/day10/: CMakeLists.txt  day10.cpp  day10.h
src/day11/: CMakeLists.txt  day11.cpp  day11.h
src/day12/: CMakeLists.txt  day12.cpp  day12.h
src/day13/: CMakeLists.txt  day13.cpp  day13.h
